// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/StepList/StepList WithAttributes play-test 1`] = `
<div data-test-block="true">
  <ol id="htmlid"
      class="_stepList_bc059_1 dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
  </ol>
</div>
`;

exports[`Tester/StepList/StepList WithBreakPointMobile smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="_stepList_bc059_1 ">
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            1
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:ro:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart
        </h3>
        <div class="_stepContent_14g5z_86  
          ">
          <div>
            brødtekst
          </div>
          <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _stepEditButton_14g5z_46"
                  type="button"
                  aria-describedby="steptitle-:ro:"
          >
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            2
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:rq:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart 2
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_active_14g5z_50 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
            3
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:rr:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          aktivt
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="_nextLine_14g5z_278">
        </div>
        <span class="_buttonWrapper_14g5z_274">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="_step_14g5z_1 _step_positiveResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_positiveResult_14g5z_223">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rt:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rt:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_positiveResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:rs:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          positivt resultat
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_positiveResult_14g5z_106 
          ">
          <div>
            <h3 class="_heading_12p5o_1 _heading_level4_12p5o_43  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              Du må gjøre følgende:
            </p>
            <ol class="_list_1xbs1_1   ">
              <li class="_element_1b7zf_1 ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="_element_1b7zf_1 ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="_element_1b7zf_1 ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_neutralResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_neutralResult_14g5z_232">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rv:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rv:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_neutralResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:ru:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          neutralt resultat
        </h3>
        <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined _resultIntro_14g5z_253">
          <div class="_panelArticle_1h73c_70">
            <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_neutralResult_14g5z_106 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Tester/StepList/StepList WithBreakPointS smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="_stepList_bc059_1 ">
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            1
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:r8:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart
        </h3>
        <div class="_stepContent_14g5z_86  
          ">
          <div>
            brødtekst
          </div>
          <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _stepEditButton_14g5z_46"
                  type="button"
                  aria-describedby="steptitle-:r8:"
          >
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            2
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:ra:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart 2
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_active_14g5z_50 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
            3
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:rb:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          aktivt
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="_nextLine_14g5z_278">
        </div>
        <span class="_buttonWrapper_14g5z_274">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="_step_14g5z_1 _step_positiveResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_positiveResult_14g5z_223">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rd:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rd:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_positiveResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:rc:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          positivt resultat
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_positiveResult_14g5z_106 
          ">
          <div>
            <h3 class="_heading_12p5o_1 _heading_level4_12p5o_43  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              Du må gjøre følgende:
            </p>
            <ol class="_list_1xbs1_1   ">
              <li class="_element_1b7zf_1 ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="_element_1b7zf_1 ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="_element_1b7zf_1 ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_neutralResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_neutralResult_14g5z_232">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rf:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rf:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_neutralResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:re:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          neutralt resultat
        </h3>
        <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined _resultIntro_14g5z_253">
          <div class="_panelArticle_1h73c_70">
            <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_neutralResult_14g5z_106 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Tester/StepList/StepList WithBreakPointXS smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="_stepList_bc059_1 ">
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            1
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:rg:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart
        </h3>
        <div class="_stepContent_14g5z_86  
          ">
          <div>
            brødtekst
          </div>
          <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _stepEditButton_14g5z_46"
                  type="button"
                  aria-describedby="steptitle-:rg:"
          >
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            2
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:ri:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart 2
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_active_14g5z_50 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
            3
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:rj:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          aktivt
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="_nextLine_14g5z_278">
        </div>
        <span class="_buttonWrapper_14g5z_274">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="_step_14g5z_1 _step_positiveResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_positiveResult_14g5z_223">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rl:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rl:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_positiveResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:rk:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          positivt resultat
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_positiveResult_14g5z_106 
          ">
          <div>
            <h3 class="_heading_12p5o_1 _heading_level4_12p5o_43  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              Du må gjøre følgende:
            </p>
            <ol class="_list_1xbs1_1   ">
              <li class="_element_1b7zf_1 ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="_element_1b7zf_1 ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="_element_1b7zf_1 ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_neutralResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_neutralResult_14g5z_232">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rn:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rn:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_neutralResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:rm:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          neutralt resultat
        </h3>
        <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined _resultIntro_14g5z_253">
          <div class="_panelArticle_1h73c_70">
            <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_neutralResult_14g5z_106 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Tester/StepList/StepList WithMultipleSteps play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 ">
    <li id=":r10:-1"
        class="_step_14g5z_1 _step_passive_14g5z_55 "
    >
      <div class="_stepSideWrapper_14g5z_143 "
           id=":r10:-1-focus-target"
           tabindex="-1"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
          1
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r10:-1"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        Hva holder du på med?
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
          Varer og tjenester
        </div>
      </div>
    </li>
    <li id=":r10:-2"
        class="_step_14g5z_1 _step_passive_14g5z_55 "
    >
      <div class="_stepSideWrapper_14g5z_143 "
           id=":r10:-2-focus-target"
           tabindex="-1"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
          2
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r10:-2"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        Hva gjør du?
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
          Selger
        </div>
      </div>
    </li>
    <li id=":r10:-3"
        class="_step_14g5z_1 _step_passive_14g5z_55 "
    >
      <div class="_stepSideWrapper_14g5z_143 "
           id=":r10:-3-focus-target"
           tabindex="-1"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
          3
        </span>
        <div class="_stepLine_14g5z_1 ">
        </div>
      </div>
      <h3 id="steptitle-:r10:-3"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        Salg av varer og tjenester
      </h3>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
        <div>
          <div>
            ja
          </div>
        </div>
      </div>
    </li>
    <li id=":r10:-4"
        class="_step_14g5z_1 _step_positiveResult_14g5z_60 "
    >
      <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
           id=":r10:-4-focus-target"
           tabindex="-1"
           aria-current="step"
      >
        <span class="_stepCircle_14g5z_193
        _stepCircle_positiveResult_14g5z_223">
          <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
               viewbox="0 0 24 24"
               focusable="false"
               aria-labelledby="svgtitle-:r1f:"
               aria-hidden="false"
               role="img"
          >
            <title id="svgtitle-:r1f:">
              Fullført
            </title>
            <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
            </path>
          </svg>
        </span>
        <div class="_stepLine_14g5z_1 _stepLine_positiveResult_14g5z_1">
        </div>
      </div>
      <h3 id="steptitle-:r10:-4"
          class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
      >
        Vårt veiledende svar
      </h3>
      <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_forest_1h73c_84 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined _resultIntro_14g5z_253">
        <div class="_panelArticle_1h73c_70">
          <h4 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
            Virksomheten skal registreres som særavgiftspliktig.
          </h4>
          <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
            brødtekst
          </p>
        </div>
      </div>
      <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_positiveResult_14g5z_106 
          ">
        <div>
          <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
            brødtekst
          </p>
        </div>
      </div>
    </li>
  </ol>
</div>
`;

exports[`Tester/StepList/StepList WithRef play-test 1`] = `
<div data-test-block="true">
  <ol class="_stepList_bc059_1 "
      data-testid="123ID"
      id="dummyIdForwardedFromRef"
  >
  </ol>
</div>
`;

exports[`Tester/StepList/StepList WithVariants smoke-test 1`] = `
<div data-test-block="true">
  <div>
    <ol class="_stepList_bc059_1 ">
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            1
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:r0:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart
        </h3>
        <div class="_stepContent_14g5z_86  
          ">
          <div>
            brødtekst
          </div>
          <button class="_button_1dutd_1 _button_withIconLeft_1dutd_6  _stepEditButton_14g5z_46"
                  type="button"
                  aria-describedby="steptitle-:r0:"
          >
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1dutd_32"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M20.71 7.04c.39-.39.39-1.04 0-1.41l-2.34-2.34c-.37-.39-1.02-.39-1.41 0l-1.84 1.83 3.75 3.75 1.84-1.83ZM3 17.25V21h3.75L17.81 9.93l-3.75-3.75L3 17.25Z">
              </path>
            </svg>
            <span class>
              Endre
            </span>
          </button>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_passive_14g5z_55 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_passive_14g5z_215">
            2
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:r2:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          besvart 2
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_active_14g5z_50 ">
        <div class="_stepSideWrapper_14g5z_143 "
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_active_14g5z_218">
            3
          </span>
          <div class="_stepLine_14g5z_1 ">
          </div>
        </div>
        <h3 id="steptitle-:r3:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          aktivt
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 
          ">
          <div>
            brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst brødtekst
          </div>
        </div>
        <div class="_nextLine_14g5z_278">
        </div>
        <span class="_buttonWrapper_14g5z_274">
          <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
                  type="button"
          >
            <span class="_buttonText_6ybyo_69">
              Neste
            </span>
          </button>
        </span>
      </li>
      <li class="_step_14g5z_1 _step_positiveResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_positiveResult_14g5z_223">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r5:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r5:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_positiveResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:r4:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          positivt resultat
        </h3>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_positiveResult_14g5z_106 
          ">
          <div>
            <h3 class="_heading_12p5o_1 _heading_level4_12p5o_43  ">
              Virksomheten skal registreres som særavgiftspliktig.
            </h3>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              For å bli registrert må du sende en søknad til Skatteetaten.Nedenfor beskriver vi hvordan du går frem og hva du må dokumentere.
            </p>
            <p class="_paragraph_1kzt5_1 _paragraph_standard_1kzt5_17  ">
              Du må gjøre følgende:
            </p>
            <ol class="_list_1xbs1_1   ">
              <li class="_element_1b7zf_1 ">
                Du må bestemme hvilken organisasjonsform som passer best.
              </li>
              <li class="_element_1b7zf_1 ">
                Registrere bedriften i Enhetsregisteret ved å fylle ut Samordnetregistermelding
              </li>
              <li class="_element_1b7zf_1 ">
                Dersom bedriften din har avgiftspliktig omsetning og/eller uttakoverstiger kr 50 000 i løpet av en 12 måneders periode, må duregistrere virksomheten i Merverdiavgiftsregisteret.
              </li>
            </ol>
          </div>
        </div>
      </li>
      <li class="_step_14g5z_1 _step_neutralResult_14g5z_60 ">
        <div class="_stepSideWrapper_14g5z_143 _stepSideWrapper_result_14g5z_149"
             tabindex="-1"
             aria-current="step"
        >
          <span class="_stepCircle_14g5z_193
        _stepCircle_neutralResult_14g5z_232">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _stepCircleIcon_14g5z_241"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r7:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r7:">
                Fullført
              </title>
              <path d="M19.94 6.71L19.24 6L9 16.23L5.26 12.5L4.91 12.85L3.5 14.26L9 19.76L21 7.76L19.94 6.71Z">
              </path>
            </svg>
          </span>
          <div class="_stepLine_14g5z_1 _stepLine_neutralResult_14g5z_1">
          </div>
        </div>
        <h3 id="steptitle-:r6:"
            class="_heading_12p5o_1 _heading_level5_12p5o_47  _stepHeading_14g5z_75"
        >
          neutralt resultat
        </h3>
        <div class="_panel_1h73c_5 _panel_filled_1h73c_26 _panel_ochre_1h73c_80 _panel_paddingXL_1h73c_109  _panel_spacingXXS_1h73c_118  undefined _resultIntro_14g5z_253">
          <div class="_panelArticle_1h73c_70">
            <h3 class="_heading_12p5o_1 _heading_level3_12p5o_34 _heading_hasSpacingSmall_12p5o_54 ">
              Intro til steget
            </h3>
            innhold
          </div>
        </div>
        <div class="_stepContent_14g5z_86 _stepContent_noButton_14g5z_94 _stepContent_neutralResult_14g5z_106 
          ">
          <div>
            more brødtekst
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
